# aws-app-runner-ansible-eda

./: .dockerignore  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  LICENSE  README.md  ansible.cfg  docker-compose.yml  pyproject.toml  requirements.yml  site.yml  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-ecr.yml
collections/: requirements.yml
docs/: FAQ.md
filter_plugins/: dev_knot_filter.py
infra/: iam.tf  main.tf  variables.tf
playbooks/: pb.dev-knot.yml
roles/: requirements.yml
rulebooks/: rb-webhook-5000.yml
